add(MGDEV-9): added loading screen and created a folder structure

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "mg-frontend",
+    "name": "Meet & Greet",
     "slug": "mg-frontend",
     "version": "1.0.0",
     "orientation": "portrait",
