--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-keychain": "^9.0.0",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
+    "react-native-sensitive-info": "^5.5.8",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
