--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "^2.20.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keychain": "^9.0.0",
     "react-native-maps": "^1.18.2",
     "react-native-safe-area-context": "^4.11.0",
