--- a/package.json
+++ b/package.json
@@ -20,31 +20,111 @@
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "@stomp/stompjs": "^7.0.0",
+    "@tradle/react-native-http": "^2.0.0",
+    "assert": "^1.1.1",
     "axios": "^1.7.7",
+    "browserify-zlib": "~0.1.4",
+    "buffer": "^4.9.1",
+    "console-browserify": "^1.1.0",
+    "constants-browserify": "^1.0.0",
+    "dns.js": "^1.0.1",
+    "domain-browser": "^1.1.1",
+    "events": "^1.0.0",
     "expo": "~51.0.28",
     "expo-image-picker": "^15.0.7",
     "expo-status-bar": "~1.12.1",
+    "https-browserify": "~0.0.0",
+    "path-browserify": "0.0.0",
+    "process": "^0.11.0",
+    "punycode": "^1.2.4",
+    "querystring-es3": "~0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-crypto": "^2.1.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-image-picker": "^7.1.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keychain": "^9.0.0",
-    "react-native-maps": "^1.18.2",
+    "react-native-level-fs": "^3.0.0",
+    "react-native-maps": "^1.14.0",
+    "react-native-os": "^1.0.1",
+    "react-native-randombytes": "^3.0.0",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-sensitive-info": "^5.5.8",
+    "react-native-tcp": "^3.2.1",
+    "react-native-udp": "^2.1.0",
     "react-native-web": "~0.19.10",
     "react-native-websocket": "^1.0.2",
+    "readable-stream": "1.0.33",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
-    "text-encoding": "^0.7.0"
+    "stream-browserify": "^1.0.0",
+    "string_decoder": "~0.10.25",
+    "text-encoding": "^0.7.0",
+    "timers-browserify": "^1.0.1",
+    "tty-browserify": "0.0.0",
+    "url": "~0.10.1",
+    "util": "~0.10.3",
+    "vm-browserify": "0.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "rn-nodeify": "^10.3.0"
   },
-  "private": true
+  "private": true,
+  "react-native": {
+    "zlib": "browserify-zlib",
+    "console": "console-browserify",
+    "constants": "constants-browserify",
+    "crypto": "react-native-crypto",
+    "dns": "dns.js",
+    "net": "react-native-tcp",
+    "domain": "domain-browser",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "os": "react-native-os",
+    "path": "path-browserify",
+    "querystring": "querystring-es3",
+    "fs": "react-native-level-fs",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "dgram": "react-native-udp",
+    "stream": "stream-browserify",
+    "timers": "timers-browserify",
+    "tty": "tty-browserify",
+    "vm": "vm-browserify",
+    "tls": false
+  },
+  "browser": {
+    "zlib": "browserify-zlib",
+    "console": "console-browserify",
+    "constants": "constants-browserify",
+    "crypto": "react-native-crypto",
+    "dns": "dns.js",
+    "net": "react-native-tcp",
+    "domain": "domain-browser",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "os": "react-native-os",
+    "path": "path-browserify",
+    "querystring": "querystring-es3",
+    "fs": "react-native-level-fs",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "dgram": "react-native-udp",
+    "stream": "stream-browserify",
+    "timers": "timers-browserify",
+    "tty": "tty-browserify",
+    "vm": "vm-browserify",
+    "tls": false
+  }
 }
